--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,13 +1,16 @@
 .formulario {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
 }
 
 .formulario form {
     background-color: #F2F2F2;
     border-radius: 20px;
     box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
+    flex: 1;
     padding: 36px 64px;
     max-width: 80%;
 }
